--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,23 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.search-books-results {
+  padding: 80px 10px 20px;
+}
+.books-grid {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  color: red;
+  
+}
+.books-grid li {
+  padding: 10px 15px;
+  text-align: left;
 }
 
 .App-header {
